--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <a class="navbar-brand">
       <span class="d-block d-lg-none">BUI HUU TRUNG</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2 img-zoomable"
-          src="public/img/trungquandev-avatar.png" alt="avatar-cv-trungquandev" title="Click to zoom image.">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2 img-zoomable" src="public/img/anhthe_final.jpg"
+          alt="avatar-cv-trungquandev" title="Click to zoom image.">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -52,24 +52,25 @@
         <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li> -->
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
-        </li>
+
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#the-end">The End</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" style="color: #ffeaa7;"
-            href="./public/files/DO TRUNG QUAN - FrontEnd Developer.pdf" download>
+            href="./public/files/BUI-HUU-TRUNG-BACKEND-DEVELOPER.pdf" download>
             Download PDF <i class="fa fa-download" aria-hidden="true" style="font-size: 14px;"></i>
           </a>
         </li>
@@ -96,11 +97,12 @@
 
         <div class="alert alert-info mb-4" role="info">
           <p class="mb-0">Hi there, welcome to look at my profile!</p>
-          <p class="mb-1">Final-year IT student (GPA 3.3/4.0) with strong self-learning ability and adaptability.
-            Skilled in backend and web application development using Node.js, Express.js, and PHP (MVC), with solid
-            knowledge of databases (MySQL). Hands-on experience through academic projects in building e-commerce
-            websites, student management systems, and API development. Looking for an opportunity as a Backend/Fullstack
-            Developer to apply technical expertise and grow in a professional environment. </p>
+          <p class="mb-1">I'm a 4th-year IT student with a strong background in backend development, especially using
+            Node.js. I have solid experience working with RESTful APIs, object-oriented programming (OOP), and handling
+            communication between frontend and backend. I'm looking for an internship where I can apply what I’ve
+            learned, work on real projects, and improve my skills by learning from experienced developers. I’m eager to
+            contribute to the team, grow as a backend developer, and get ready for a full-time job after graduation..
+          </p>
 
         </div>
         <p class="lead mb-2">
@@ -135,42 +137,6 @@
 
     <hr class="m-0">
 
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
-      <div class="my-auto">
-        <h2 class="mb-4">Projects</h2>
-        <div class="subheading mb-3">Here are a few of my standout projects:</div>
-      </div>
-      <div class="container px-4 px-lg-5 ">
-        <div class="row gx-0">
-          <div class="col-lg-6 p-1">
-            <a class="portfolio-item" href="https://podfoods.co/" target="_blank" rel="noreferrer">
-              <div class="caption">
-                <div class="caption-content">
-                  <div class="h2 flex-aic">Pod Foods<i class="fas fa-external-link-alt" style="font-size: 8px;"></i>
-                  </div>
-                  <p class="mb-0">Software and data-enabled distribution and logistics platform!</p>
-                </div>
-              </div>
-              <img class="img-fluid" src="public/img/projects/p-1.jpeg" alt="trungquandev-projects" />
-            </a>
-          </div>
-          <div class="col-lg-6 p-1">
-            <a class="portfolio-item" href="https://www.sync-up.jp/" target="_blank" rel="noreferrer">
-              <div class="caption">
-                <div class="caption-content">
-                  <div class="h2 flex-aic">Sync Up<i class="fas fa-external-link-alt" style="font-size: 8px;"></i></div>
-                  <p class="mb-0">Connect part-time workers with their store managers!</p>
-                </div>
-              </div>
-              <img class="img-fluid" src="public/img/projects/p-2.jpeg" alt="trungquandev-projects" />
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <hr class="m-0">
 
@@ -226,91 +192,233 @@
 
 
         </ul>
-<div class="subheading mb-3">Workflow:</div>
-<ul class="fa-ul mb-0">
-  <li>
-    <i class="fa-li fa fa-check" style="color: #3DAB62;"></i>
-    <div><span style="font-weight: 600;">Clean Code &amp; Debugging</span></div>
-  </li>
-  <li>
-    <i class="fa-li fa fa-check" style="color: #3DAB62;"></i>
-    <div><span style="font-weight: 600;">Version Control with Git &amp; Github</span></div>
-  </li>
-  <li>
-    <i class="fa-li fa fa-check" style="color: #3DAB62;"></i>
-    <div><span style="font-weight: 600;">Team Collaboration using Agile &amp; Scrum</span></div>
-  </li>
-  <li>
-    <i class="fa-li fa fa-check" style="color: #3DAB62;"></i>
-    <div><span style="font-weight: 600;">Responsive &amp; User-friendly Web Design</span></div>
-  </li>
-  <li>
-    <i class="fa-li fa fa-check" style="color: #3DAB62;"></i>
-    <div><span style="font-weight: 600;">Continuous Learning &amp; Problem Solving</span></div>
-  </li>
-  <li class="mt-2">
-    <i class="fa-li fa fa-check" style="color: #3DAB62;"></i>
-    <span style="font-weight: 600;">My maxim:</span>
-    <em>"Keep learning, keep building, keep growing!"</em>
-  </li>
-</ul>
+        <div class="subheading mb-3">Workflow:</div>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check" style="color: #3DAB62;"></i>
+            <div><span style="font-weight: 600;">Clean Code &amp; Debugging</span></div>
+          </li>
+          <li>
+            <i class="fa-li fa fa-check" style="color: #3DAB62;"></i>
+            <div><span style="font-weight: 600;">Version Control with Git &amp; Github</span></div>
+          </li>
+          <li>
+            <i class="fa-li fa fa-check" style="color: #3DAB62;"></i>
+            <div><span style="font-weight: 600;">Team Collaboration using Agile &amp; Scrum</span></div>
+          </li>
+          <li>
+            <i class="fa-li fa fa-check" style="color: #3DAB62;"></i>
+            <div><span style="font-weight: 600;">Responsive &amp; User-friendly Web Design</span></div>
+          </li>
+          <li>
+            <i class="fa-li fa fa-check" style="color: #3DAB62;"></i>
+            <div><span style="font-weight: 600;">Continuous Learning &amp; Problem Solving</span></div>
+          </li>
+          <li class="mt-2">
+            <i class="fa-li fa fa-check" style="color: #3DAB62;"></i>
+            <span style="font-weight: 600;">My maxim:</span>
+            <em>"Keep learning, keep building, keep growing!"</em>
+          </li>
+        </ul>
 
     </section>
 
     <hr class="m-0">
 
-   <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-  <div class="my-auto">
-    <h2 class="mb-4">Education</h2>
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+      <style>
+        .project-wrapper {
+          border: 2px solid #ddd;
+          border-radius: 8px;
+          padding: 15px;
+          margin-bottom: 30px;
+          background-color: #fff;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+          transition: box-shadow 0.3s ease;
+          display: flex;
+          flex-wrap: wrap;
+        }
 
-    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-      <div class="resume-content mr-auto">
-        <div class="mb-3">
-          <h3 class="mb-0">
-            <a href="https://utt.edu.vn/" target="_blank" rel="noreferrer">
-              University of Transport Technology (UTT)
-              <i class="fas fa-external-link-alt" style="font-size: 16px;"></i>
-            </a>
-          </h3>
-          <div class="subheading">
-            Bachelor of Information Technology — Final-year Student
-          </div>
-          <div class="resume-date d-block d-md-none">
-            <span class="text-primary" style="font-weight: 500;">Oct 2021 - Present</span>
-          </div>
-        </div>
+        .project-wrapper:hover {
+          box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+        }
 
-        <div class="mb-2">
-          <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
-          During my studies, I have built a solid foundation in programming, databases, and web technologies.
-        </div>
-        <div class="mb-2">
-          <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
-          I am currently specializing in <strong>Backend Development</strong> with <strong>Node.js, JavaScript, and PHP</strong>,
-          focusing on building RESTful APIs and web applications.
-        </div>
-        <div class="mb-2">
-          <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
-          I have participated in several university and personal projects using <strong>Laravel (MVC)</strong>,
-          <strong>Express.js</strong>, and <strong>MySQL/MongoDB</strong>.
-        </div>
-        <div class="m-0">
-          <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
-          <strong>GPA:</strong> 3.3 / 4.0
-        </div>
+        .portfolio-item {
+          overflow: hidden;
+        }
+
+        .portfolio-item img {
+          width: 100%;
+          height: 250px;
+          /* bạn có thể thay đổi chiều cao nếu muốn */
+          object-fit: cover;
+          border-radius: 6px;
+          display: block;
+        }
+
+        .project-title-overlay {
+          position: absolute;
+          top: 10px;
+          left: 10px;
+          background-color: rgba(0, 0, 0, 0.6);
+          color: #fff;
+          padding: 5px 10px;
+          border-radius: 4px;
+          z-index: 2;
+        }
+
+        .flex-aic {
+          display: flex;
+          align-items: center;
+          gap: 6px;
+        }
+
+        .project-description {
+          padding: 15px;
+        }
+
+        .project-description ul {
+          padding-left: 1.2rem;
+        }
+
+        .project-description ul li {
+          margin-bottom: 5px;
+        }
+
+        @media (max-width: 992px) {
+          .project-wrapper .col-lg-6 {
+            flex: 0 0 100%;
+            max-width: 100%;
+          }
+
+          .portfolio-item img {
+            height: auto;
+          }
+        }
+      </style>
+
+      <div class="my-auto">
+        <h2 class="mb-4">Projects</h2>
+        <div class="subheading mb-3">Here are a few of my standout projects:</div>
       </div>
 
-      <div class="resume-date d-none d-md-block text-md-right">
-        <span class="text-primary">Oct 2021 - Present</span>
+      <div class="container px-4 px-lg-5">
+        <!-- Project 1 -->
+        <div class="project-wrapper row gx-0">
+          <div class="col-lg-6">
+            <div class="portfolio-item position-relative mb-3 mb-lg-0">
+              <a href="https://trello.trungbui.dev/" target="_blank" rel="noreferrer">
+                <div class="project-title-overlay">
+                  <div class="h3 flex-aic">
+                    Trello <i class="fas fa-external-link-alt" style="font-size: 8px;"></i>
+                  </div>
+                </div>
+                <img src="public/img/projects/trello_img.jpeg" alt="Trello Project" />
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="project-description">
+              <h4>Project Description</h4>
+              <p>Demo: Username: trungbuimanifest@gmail.com, Password: 12345678b.</p>
+              <ul>
+                <li><strong>Frontend</strong>: Built with React and Material UI for a modern UI, using Redux for state
+                  management and Axios for API calls.</li>
+                <li><strong>Backend</strong>: Powered by Node.js, Express, and RESTful APIs, with MongoDB for scalable
+                  data storage.</li>
+                <li><strong>Features</strong>: Drag-and-drop card/column functionality, JWT-based authentication, and
+                  email verification for secure access.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- Project 2 -->
+        <div class="project-wrapper row gx-0">
+          <div class="col-lg-6">
+            <div class="portfolio-item position-relative mb-3 mb-lg-0">
+              <a href="https://github.com/chudinhtao/Web_Laptop.git/" target="_blank" rel="noreferrer">
+                <div class="project-title-overlay">
+                  <div class="h3 flex-aic">
+                    Web-Laptop <i class="fas fa-external-link-alt" style="font-size: 8px;"></i>
+                  </div>
+                </div>
+                <img src="public/img/laptop-web.png" alt="Web-Laptop Project" />
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="project-description">
+              <h4>Project Description</h4>
+              <ul>
+                <li><strong>Group project</strong>: 5 members.</li>
+                <li><strong>Frontend</strong>: Developed with HTML, CSS, and vanilla JavaScript for dynamic UI and
+                  seamless API integration.</li>
+                <li><strong>Backend</strong>: Built with PHP and Laravel using MVC architecture, providing RESTful APIs
+                  with JWT-based authentication.</li>
+                <li><strong>Database & Storage</strong>: MySQL for efficient data management and cloud storage for
+                  images, ensuring scalability and performance.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+      <div class="my-auto">
+        <h2 class="mb-4">Education</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <div class="mb-3">
+              <h3 class="mb-0">
+                <a href="https://utt.edu.vn/" target="_blank" rel="noreferrer">
+                  University of Transport Technology (UTT)
+                  <i class="fas fa-external-link-alt" style="font-size: 16px;"></i>
+                </a>
+              </h3>
+              <div class="subheading">
+                 Information Technology — Final-year Student
+              </div>
+              <div class="resume-date d-block d-md-none">
+                <span class="text-primary" style="font-weight: 500;">Oct 2021 - Present</span>
+              </div>
+            </div>
+
+            <div class="mb-2">
+              <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+              During my studies, I have built a solid foundation in programming, databases, and web technologies.
+            </div>
+            <div class="mb-2">
+              <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+              I am currently specializing in <strong>Backend Development</strong> with <strong>Node.js, JavaScript, and
+                PHP</strong>,
+              focusing on building RESTful APIs and web applications.
+            </div>
+            <div class="mb-2">
+              <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+              Strong self-learning ability and adaptability in fast-paced environments
+            </div>
+            <div class="m-0">
+              <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+              <strong>GPA:</strong> 3.3 / 4.0
+            </div>
+          </div>
+
+          <div class="resume-date d-none d-md-block text-md-right">
+            <span class="text-primary">Oct 2022 - Present</span>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
       <div class="my-auto">
         <h2 class="mb-4">Interests</h2>
         <p class="mb-2">Aside from being a developer, I spend much of my free time listening to music, reading books,
@@ -334,7 +442,7 @@
             title="Click to zoom image.">
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="the-end">
       <div class="my-auto">
@@ -344,8 +452,12 @@
           <p><em>"You're a flower on earth, let's make your life beautiful and meaningful!"</em></p>
         </div>
         <div class="mb-5">
-          <div class="the-end-cover">
-            <img src="public/img/trungquandev-the-end-cover.jpg" alt="cv-trungquandev">
+          <div class="the-end-message">
+            <h3 class="text-center mb-3">🌟 The Journey Continues... 🌟</h3>
+            <p class="text-center">This is not just the end, but a new beginning. Let’s create, innovate, and inspire
+              together!</p>
+            <p class="text-center mt-4"><strong>Trung Bui Dev</strong></p>
+            <p class="text-center"><em>With Gratitude, October 2025</em></p>
           </div>
         </div>
       </div>
