--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#the-end">The End</a>
+          <a class="nav-link js-scroll-trigger" href="#the-end">The End.</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" style="color: #ffeaa7;"
-            href="./public/files/BUI-HUU-TRUNG-BACKEND-DEVELOPER.pdf" download>
+            href="./public/files/BUI-HUU-TRUNG-BACKEND-DEVELOPER.pdf" download> 
             Download PDF <i class="fa fa-download" aria-hidden="true" style="font-size: 14px;"></i>
           </a>
         </li>
