--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <span class="d-block d-lg-none">BUI HUU TRUNG</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2 img-zoomable" src="public/img/anhthe_final.jpg"
-          alt="avatar-cv-trungquandev" title="Click to zoom image.">
+          alt="avatar-cv-trungbuidev" title="Click to zoom image.">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -88,7 +88,7 @@
         </h1>
         <div class="subheading mb-1">
           <i class="fa fa-address-card"></i>
-          Backend Developer
+          Intern Backend Developer
         </div>
         <div class="subheading mb-4">
           <i class="fa fa-map"></i>
